--- a/fund-confirm.html
+++ b/fund-confirm.html
@@ -1,99 +1,91 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Confirm Funding</title>
+  <title>Fund Wallet</title>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
+      text-align: center;
+      padding: 2rem;
       background-color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      padding: 20px;
-      background-image: url('airtel-bg.png');
-      background-size: cover;
-      background-position: center;
     }
-    .loader {
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid red;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
-      margin-bottom: 20px;
+    .logo {
+      width: 80px;
+      animation: spin 2s linear infinite;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    .card {
-      background-color: rgba(255, 255, 255, 0.95);
-      border-radius: 16px;
+    .account-card {
+      margin-top: 30px;
+      border: 2px solid red;
       padding: 20px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      max-width: 350px;
-      display: none;
+      border-radius: 10px;
+      background: #fff;
     }
-    .btn {
+    button {
+      padding: 10px 20px;
       background-color: red;
-      color: #fff;
+      color: white;
       border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      margin-top: 20px;
       font-size: 16px;
+      margin-top: 20px;
+      cursor: pointer;
     }
-    .success {
-      margin-top: 15px;
-      color: green;
+    .popup {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #4caf50;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      display: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div class="loader" id="loader"></div>
-  <div class="card" id="card">
-    <h3>Send ₦<span id="amount">3000</span> to:</h3>
-    <p><strong>EMMANUEL OKWUNNA</strong></p>
-    <p>SmartCash Payment Service Bank</p>
-    <p>812 489 0070</p>
-    <button class="btn" id="fundBtn">I Have Funded Wallet</button>
-    <p class="success" id="successMsg"></p>
-  </div>  <script>
-    const loader = document.getElementById('loader');
-    const card = document.getElementById('card');
-    const amountDisplay = document.getElementById('amount');
-    const fundBtn = document.getElementById('fundBtn');
-    const successMsg = document.getElementById('successMsg');
+  <img src="your-airtel-logo.png" class="logo" alt="Airtel Logo">
+  <h2>Send ₦<span id="amount">3000</span> to:</h2>
 
-    // Show loader, then display card after 2 seconds
-    setTimeout(() => {
-      loader.style.display = 'none';
-      card.style.display = 'block';
-      const amount = localStorage.getItem('fundAmount') || '3000';
-      amountDisplay.innerText = amount;
-    }, 2000);
+  <div class="account-card">
+    <p><strong>Name:</strong> EMMANUEL OKWUNNA</p>
+    <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
+    <p><strong>Account No:</strong> 812 489 0070</p>
+  </div>
 
-    let tapCount = parseInt(localStorage.getItem('tapCount') || '0');
+  <button onclick="recordTap()">I Have Funded</button>
 
-    fundBtn.onclick = () => {
+  <div id="popup" class="popup">Payment recorded! Please wait...</div>
+
+  <script>
+    const amountEl = document.getElementById("amount");
+    amountEl.innerText = localStorage.getItem("pendingAmount") || "3000";
+
+    let tapCount = localStorage.getItem("fundTapCount") || 0;
+
+    function recordTap() {
       tapCount++;
-      localStorage.setItem('tapCount', tapCount);
+      localStorage.setItem("fundTapCount", tapCount);
 
-      successMsg.innerText = `Thank you! Confirmation ${tapCount}/20`;
+      document.getElementById("popup").style.display = "block";
+      setTimeout(() => {
+        document.getElementById("popup").style.display = "none";
+      }, 2000);
 
       if (tapCount >= 20) {
-        let balance = parseInt(localStorage.getItem('user.balance') || '0');
-        balance += 3000;
-        localStorage.setItem('user.balance', balance);
-        successMsg.innerText = '₦3,000 successfully added to your balance!';
-        localStorage.setItem('tapCount', 0); // reset count
+        let currentBalance = parseInt(localStorage.getItem("user.balance") || "0");
+        currentBalance += 3000;
+        localStorage.setItem("user.balance", currentBalance);
+        localStorage.setItem("fundTapCount", 0);
+        alert("₦3,000 has been added to your balance!");
+        window.location.href = "dashboard.html";
       }
-    };
-  </script></body>
+    }
+  </script>
+</body>
 </html>
